--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
+    "build": "next build && next export",
+    "deploy": "npm run build && gh-pages -d out -b changesV2",
     "dev": "next dev",
     "lint": "eslint .",
     "start": "next start"
