--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clsx": "^2.1.1",
     "emailjs-com": "latest",
     "lucide-react": "^0.454.0",
-    "next": "14.2.25",
+    "next": "^16.0.1",
     "next-themes": "^0.4.6",
     "react": "^19",
     "react-dom": "^19",
